# ceramicraft-ai-secure-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/ci/: config.yml  docker-compose.yml  zap.conf
.github/workflows/: deepeval.yml  deploy.yml  lint.yml  snyk.yml  sonar.yml  test.yml  train-model.yml  trivy.yml  zap.yml
api/: risk_api.py
data/: mock_data.json
deepeval/: test_llm_judge.py
model/: fraud_model.pkl
scripts/: prompt_register.py  train_data_gen.py  train_model.py
scripts/mock/: kafka_producer.py  order_created.json  send_kafka_msg.sh  user_activated.json
scripts/mysql/: init.sql
service/: agent_service.py  feature_service.py  ml_model.py  risk_scoring.py  rule_engine.py
src/ceramicraft_ai_secure_agent/: app.py
src/ceramicraft_ai_secure_agent/api/: risk_api.py
src/ceramicraft_ai_secure_agent/config/: config.py  config.yaml  default.yaml
src/ceramicraft_ai_secure_agent/data/: const.py  event_data.py  feature_columns.py  risk_user_review.py  state.py  train_data_gen.py
src/ceramicraft_ai_secure_agent/kafka/: consumer.py  order_handler.py  user_register_handler.py
src/ceramicraft_ai_secure_agent/mock/: gen_mock_data.py
src/ceramicraft_ai_secure_agent/model/: fraud_logistic_regression.joblib  fraud_logistic_regression.pkl  model_weights.json  train_model.py
src/ceramicraft_ai_secure_agent/mysql/: __init__.py  risk_user_review_storage.py
src/ceramicraft_ai_secure_agent/mysqlcli/: __init__.py  risk_user_review_storage.py
src/ceramicraft_ai_secure_agent/prompts/: fraud_recommendation_prompt_v2.txt  fraud_recommendation_prompt_v3.txt  fraud_recommendation_prompt_v4.txt
src/ceramicraft_ai_secure_agent/redis/: __init__.py  blacklist_storage.py  order_storage.py  user_last_status_storage.py  user_storage.py  watchlist_storage.py
src/ceramicraft_ai_secure_agent/rediscli/: __init__.py  blacklist_storage.py  order_storage.py  user_last_status_storage.py  user_storage.py  watchlist_storage.py  whitelist_storage.py
src/ceramicraft_ai_secure_agent/routers/: demo_api.py  demo_page.html  demo_page_external_full.html  demo_page_full.css  demo_page_full.js
src/ceramicraft_ai_secure_agent/service/: agent_service.py  feature_service.py  ml_model.py  policy_engine.py  risk_scoring.py  rule_engine.py
src/ceramicraft_ai_secure_agent/utils/: logger.py  metric.py  mlflow_trace.py  openai.py
tests/: test_agent_service.py  test_feature_service.py  test_ml_model.py  test_policy_engine.py  test_risk_scoring.py  test_rule.py  test_rule_engine.py
utils/: logger.py
