[project]
name = "ceramicraft-ai-secure-agent"
version = "0.1.0"
description = "AI-powered secure agent for detecting risky users and abnormal transactions in Ceramicraft"
readme = "README.md"
requires-python = ">=3.11,<3.13" # 建议调整为 3.11 或 3.12 以获得最佳 ML 库兼容性
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
# 核心运行依赖：涵盖了 Module 2 (Security) 和 Module 3 (Agentic AI)
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn",
    "pydantic>=2.6.0",
    "langgraph>=0.0.10",
    "langgraph-checkpoint>=3.0.0",
    "langchain-openai>=0.1.0",
    "joblib",
    "boto3",
    "protobuf>=5.29.6",
    "mlflow[scikit-learn]>=3,<4",
    "setuptools<82",
    "langchain>=1.2.13",
    "gunicorn>=22.0.0",
    "pyOpenSSL>=26.0.0",
    "requests>=2.33.0",
    "confluent-kafka>=2.3.0",
    "redis>=7.4.0",
    "mysql-connector-python>=9.6.0",
]

[dependency-groups]
# 开发与测试依赖
dev = [
    "pytest>=8.1.0",            # [cite: 10, 8]
    "pytest-cov>=6.0.0",        # 单测覆盖率计算
    "httpx>=0.27.0",            # 
    "ruff>=0.3.0",              # 代码规范与安全静态检查
    "bandit>=1.7.0",            # 专门针对 Python 的安全扫描工具
    "ty>=0.0.22",
    "numpy<2.0",
]  
# 模型训练环境
train = [
    "pandas",
    "matplotlib",
    "mlflow",
    "numpy<2.0"
]

optional = [
    "guardrails-ai>=0.4.0",     # Module 2: AI 安全防护栏 
    "shap>=0.44.0",             # Module 1: 用于 Explainable AI (XAI) 
]

[tool.uv]
# 确保团队成员使用一致的 Python 版本
default-groups = ["dev"]

[tool.ruff]
# 配置代码检查，符合 Responsible AI 的代码整洁要求
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# 将原来的设置移动到这里
select = ["E", "F", "S", "I"]
ignore = ["D100"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # 在测试目录中允许使用 assert

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
relative_files = true
omit = [
    "tests/**/*",
    ".github/**/*"
]
branch = true

[tool.coverage.report]
show_missing = true
