[project]
name = "ceramicraft-ai-secure-agent"
version = "0.1.0"
description = "AI-powered secure agent for detecting risky users and abnormal transactions in Ceramicraft"
readme = "README.md"
requires-python = ">=3.11,<3.13" # 建议调整为 3.11 或 3.12 以获得最佳 ML 库兼容性
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
# 核心运行依赖：涵盖了 Module 2 (Security) 和 Module 3 (Agentic AI)
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn",
    "pydantic>=2.6.0",
    "langgraph>=0.0.10",
    "langchain-openai>=0.1.0",
    "boto3",
    "langchain>=1.2.13",
    "redis>=7.4.0",
    "mysql-connector-python>=9.6.0",
    "mlflow-skinny>=2.14.0",
    "aiokafka>=0.11.0",
    "setuptools<82",
]

[dependency-groups]
# 开发与测试依赖
dev = [
    "pytest>=8.1.0",            # [cite: 10, 8]
    "pytest-cov>=6.0.0",        # 单测覆盖率计算
    "ruff>=0.3.0",              # 代码规范与安全静态检查
    "bandit>=1.7.0",            # 专门针对 Python 的安全扫描工具
    "ty>=0.0.22",
]

# 模型训练环境
train = [
    "pandas",
    "matplotlib",
    "mlflow",
    "numpy<2.0",
]

optional = [
    "guardrails-ai>=0.4.0",     # Module 2: AI 安全防护栏 
    "shap>=0.44.0",             # Module 1: 用于 Explainable AI (XAI) 
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "S", "I"]
ignore = ["D100"]

[tool.ruff.lint.isort]
known-first-party = ["ceramicraft_ai_secure_agent"]

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # 在测试目录中允许使用 assert

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
relative_files = true
omit = [
    "tests/**/*",
    ".github/**/*"
]
branch = true

[tool.coverage.report]
show_missing = true
